# badger

./: .gitignore  .yardopts  CMakeLists.txt  README.txt  Rakefile  client.rb  client.txt  config.h.cmake  mruby_config.rb
include/badger/: badger.h  caller.h  data.h  encoders.h  errno.h  func.h  function.h  mempool.h  packet.h  request.h  response.h  rpc.h  server.h  service.h  services.h  slist.h
include/badger/ffi/: func.h  lib.h  libs.h
include/badger/services/: ffi.h  fs.h  sys.h
include/ronin/: list.h  rat.h  slist.h
include/ronin/ffi/: func.h  lib.h  libs.h
include/ronin/rat/: errno.h  func.h  lib.h  libs.h  list.h  service.h  tree.h
include/ronin/rat/ffi/: func.h  libs.h
lib/badger/: message.rb  rpc.rb  transport.rb  version.rb
lib/badger/message/: responses.rb
lib/badger/rpc/: fs.rb  net.rb  proc.rb  shell.rb  shell.rb~
lib/badger/transports/: tcp_connect_back.rb  tcp_server.rb
modules/: install_paths.cmake
src/: badger.c  caller.c  data.c  encoders.c  func.c  function.c  list.c  main.c  mempool.c  rat.c  server.c  service.c  slist.c  util.c
src/ffi/: func.c
src/private/: aes.h  caller.c  caller.h  packet.c  packet.h  request.h  response.c  response.h  server.c  server.h  util.c  util.h
src/private/ffi/: function.c  function.h  library.c  library.h  types.c  types.h  value.c  value.h
src/programs/: badger.c  server.c
src/services/: ffi.c  fs.c  sys.c
test/: CMakeLists.txt  test.c  test.h  test_list_search.c  test_slist_search.c
